# whim-ide

./: .gitignore  .prettierignore  AGENTS.md  README.md  RELEASE_VALIDATION_REPORT.md  SECURITY_HARDENING_REPORT.md  eslint.config.js  handoff.md  index.html  latest.json  make_sig.mjs  package-lock.json  package.json  tauri-updater.key.pub  vite.config.ts
.github/workflows/: ci.yml  release.yml  sign-and-release.yml
.pi/codebase-map/: MANIFEST.md
.pi/goals/: goal_events.jsonl
benchmarks/: README.md  whim-agent-core.json
docs/: README.md  agent-runtime-research.md  architecture.md  ecosystem.md  harness-profile.md  product.md  research.md  roadmap.md  trust-and-automation.md
scratch/: extract.cjs  extract_history.cjs  extract_tree_file.cjs  find_backend_patches.cjs  find_deploy_args.cjs  find_deploy_args_body.cjs  find_deploy_args_definition.cjs  find_deploy_args_v2.cjs  find_deploy_args_v3.cjs  find_deploy_functions.cjs  find_deploy_preflight.cjs  find_deployment_source.cjs  find_discover_providers.cjs  find_orchestration_funcs.cjs  find_orchestration_remaining.cjs  find_record_verification.cjs  find_record_verification_all.cjs  find_remaining_deploy.cjs  find_remaining_orch.cjs  get_deploy_args.cjs  raw_search.cjs  restore.cjs  restore_json.cjs  search_agent_workspace.cjs  search_deployment_fns.cjs  search_discover_credential.cjs  search_discover_local.cjs  search_fetch_json.cjs  search_history.cjs  search_memories.cjs  search_quick_capture.cjs  search_raw_file.cjs  search_resolve_tool.cjs  search_sqlite.cjs  search_state.cjs  search_tree_options.cjs  search_views.cjs  test_newline.cjs  unescape_backend.cjs  view_candidate_risk.cjs  (+21 more)
scripts/: benchmark-agent-harness.mjs  bump-version.mjs  check-normalization.mjs  download_ocr_models.js  release.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-sidecar/: index.js  index.ts  package-lock.json  package.json
src-sidecar/ocr/: differencing.ts  onnxAdapter.ts  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  whim-release.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  capabilities.rs  harness.rs  lib.rs  main.rs  memory.rs  orchestrator.rs  worktrees.rs
src-tauri/src/agent/: api.rs  background.rs  events.rs  execution.rs  external.rs  loop.rs  loop_detector.rs  prompt.rs  provider.rs  tools.rs  transport.rs
src-tauri/src/backend/: benchmark.rs  browser.rs  chat.rs  codebase_index.rs  computer.rs  context.rs  decomposer.rs  deployment.rs  eve.rs  execution.rs  external_harness.rs  fs_watcher.rs  media.rs  mod.rs  oauth.rs  orchestration.rs  plugins.rs  productivity.rs  provider.rs  reflector.rs  scheduler.rs  search.rs  service_provisioning.rs  settings.rs  synthesizer.rs  tests.rs  update_state.rs  voice.rs  workflows.rs  workspace.rs
src-tauri/src/backend/mcp/: client.rs  manager.rs  transport.rs  types.rs
src-tauri/src/backend/whim_route/: adapters.rs  credentials.rs  gateway.rs  mod.rs  registry.rs  routing.rs
(+157 files in other folders)
