[package]
name = "workwhim-ide"
version = "0.4.7"
description = "Whim, a Windows-native IDE for agent-first software creation"
authors = ["Vendex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workwhim_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1"
dirs = "5"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
keyring = "4.1.4"
async-trait = "0.1.89"
windows = { version = "0.58.0", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com"
] }
lazy_static = "1.5"
regex = "1"
xcap = "0.9.6"
image = "0.25.10"
base64 = "0.22.1"
ignore = "0.4.28"
tree-sitter = "0.26.11"
tree-sitter-typescript = "0.23.2"
sha2 = "0.10"
rand = "0.8"
open = "5"
url = "2"
notify = { version = "8", features = ["macos_fsevent"] }
